--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
     <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorPrimary">#F50057</item>
-        <item name="android:textColor">#F50057</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:background">#FFFFFF</item>
         <item name="android:indeterminateTint">#F50057</item>
     </style>
