--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.bkash_tokenized_android_kotlin.ui.home.HomeFragment"
+        android:name="com.example.bkash_tokenized_android_kotlin.bkash.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.bkash_tokenized_android_kotlin.ui.search.SearchFragment"
+        android:name="com.example.bkash_tokenized_android_kotlin.bkash.ui.search.SearchFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_search" />
 
     <dialog
         android:id="@+id/webViewDialog"
-        android:name="com.example.bkash_tokenized_android_kotlin.ui.home.WebViewDialog"
+        android:name="com.example.bkash_tokenized_android_kotlin.bkash.ui.home.WebViewDialog"
         tools:layout="@layout/fragment_web_view"/>
 
     <dialog
         android:id="@+id/bottomSheetDialog"
-        android:name="com.example.bkash_tokenized_android_kotlin.ui.home.BottomSheetFragment"
+        android:name="com.example.bkash_tokenized_android_kotlin.bkash.ui.home.BottomSheetFragment"
         tools:layout="@layout/bottom_sheet_dialog"/>
 
 </navigation>
